<resources>
    <string name="app_name">Question++</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">Login</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="home_user_login">Login</string>
    <string name="home_user_nivel">Level</string>
    <string name="home_user_pontos">Points</string>
    <string name="home_ranking">Ranking</string>

    <string name="menu_courses">Courses</string>

    <string name="menu_reminder">Reminder</string>

    <string name="menu_notes">Notes</string>

    <string name="menu_awards">Awards</string>

    <string name="menu_settings">Settings</string>

    <string name="menu_exit">Exit</string>

    <string name="title_activity_reminder_manager">ReminderManagerActivity</string>
    <string name="reminder_manager_hint_title">Title</string>
    <string name="reminder_manager_hint_content">Content</string>

    <string name="txt_question">Question</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
    <string name="txt_mode_nigth">Mode Nigth</string>

</resources>
