<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_courses_white_24dp"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_reminder_white_24dp"
            android:title="@string/menu_reminder" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_event_note_white_24dp"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_awards"
            android:icon="@drawable/ic_card_giftcard_white_24dp"
            android:title="@string/menu_awards" />

    </group>
    <item android:title="Ouders">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_applications_white_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_white_24dp"
                android:title="@string/menu_exit" />
        </menu>
    </item>
</menu>
