<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.reciclagus.question.view.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.reciclagus.question.view.ui.courses.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_reminder"
        android:name="com.reciclagus.question.view.ui.Reminder.ReminderFragment"
        android:label="@string/menu_reminder"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.reciclagus.question.view.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.reciclagus.question.view.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_awards"
        android:name="com.reciclagus.question.view.ui.awards.AwardsFragment"
        android:label="@string/menu_awards"
        tools:layout="@layout/fragment_awards" />
</navigation>